objects/Service_Matrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>PRODUCT_LINE__c</fullName>
        <label>PRODUCT LINE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRODUCT_TYPE__c</fullName>
        <label>PRODUCT TYPE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_of_Line_Total__c</fullName>
        <label>Percentage of Line Total</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Service Matrix</label>
</CustomObject>